crates/ruff_python_parser/tests/snapshots/invalid_syntax@ipython_escape_command_in_with_statement.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/ipython_escape_command_in_with_statement.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..86,
        body: [
            With(
                StmtWith {
                    node_index: NodeIndex(None),
                    range: 37..55,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 42..43,
                            node_index: NodeIndex(None),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 42..43,
                                    id: Name("a"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                        WithItem {
                            range: 45..46,
                            node_index: NodeIndex(None),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 45..46,
                                    id: Name("b"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 51..55,
                            },
                        ),
                    ],
                },
            ),
            With(
                StmtWith {
                    node_index: NodeIndex(None),
                    range: 56..85,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 61..62,
                            node_index: NodeIndex(None),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 61..62,
                                    id: Name("a"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                        WithItem {
                            range: 64..65,
                            node_index: NodeIndex(None),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 64..65,
                                    id: Name("b"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Assign(
                            StmtAssign {
                                node_index: NodeIndex(None),
                                range: 70..75,
                                targets: [
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 70..71,
                                            id: Name("x"),
                                            ctx: Store,
                                        },
                                    ),
                                ],
                                value: NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 74..75,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                            },
                        ),
                        Assign(
                            StmtAssign {
                                node_index: NodeIndex(None),
                                range: 80..85,
                                targets: [
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 80..81,
                                            id: Name("y"),
                                            ctx: Store,
                                        },
                                    ),
                                ],
                                value: NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 84..85,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # parse_options: {"mode": "ipython"}
2 | with a,?b
  |        ^ Syntax Error: Expected `,`, found `?`
3 |     pass
4 | with a,?b
  |


  |
1 | # parse_options: {"mode": "ipython"}
2 | with a,?b
  |          ^ Syntax Error: Expected `:`, found newline
3 |     pass
4 | with a,?b
5 |     x = 1
  |


  |
2 | with a,?b
3 |     pass
4 | with a,?b
  |        ^ Syntax Error: Expected `,`, found `?`
5 |     x = 1
6 |     y = 2
  |


  |
2 | with a,?b
3 |     pass
4 | with a,?b
  |          ^ Syntax Error: Expected `:`, found newline
5 |     x = 1
6 |     y = 2
  |
